--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,53 @@
+# .htaccess - Configuration améliorée pour GPduMonde
+
 RewriteEngine On
+
+# Gestion des headers de sécurité
+Header always set X-Frame-Options "SAMEORIGIN"
+Header always set X-Content-Type-Options "nosniff"
+Header always set X-XSS-Protection "1; mode=block"
+
+# Cache des ressources statiques
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
+    ExpiresByType font/woff2 "access plus 1 year"
+</IfModule>
+
+# Compression GZIP
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE text/javascript
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/atom_xml
+</IfModule>
+
+# Réécriture des URLs pour les assets
+RewriteRule ^assets/(.*)$ public/assets/$1 [L]
+
+# Servir les fichiers statiques directement
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^(.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2))$ $1 [L]
+
+# Redirection vers index.php pour toutes les autres requêtes
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ public/index.php [QSA,L]
+
+# Empêcher l'accès direct aux fichiers PHP dans src/
+RewriteRule ^src/ - [F,L]
+
+# Page d'erreur personnalisée (optionnel)
+# ErrorDocument 404 /404.php
