--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "php -S localhost:8000 -t public"
+    "start": "php -S localhost:8000 -t public ",
+    "serve":"json-server --watch db.json --port 3000"
+
   },
   "keywords": [],
   "author": "",
